put output name back to plotly.js

--- a/devtools/test_dashboard/index.html
+++ b/devtools/test_dashboard/index.html
@@ -22,7 +22,7 @@
   <div id="snapshot"></div>
 
   <script src="../../node_modules/mathjax-v2/MathJax.js?config=TeX-AMS-MML_SVG"></script>
-  <script charset="utf-8" id="source" src="../../build/plotly-esbuild.js"></script>
+  <script charset="utf-8" id="source" src="../../build/plotly.js"></script>
   <script charset="utf-8" src="../../build/test_dashboard-bundle.js"></script>
 </body>
 </html>
